using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;
using UnityEngine.AI;
using UnityEngine.Events;
using Sirenix.OdinInspector;
using Sirenix.Serialization;

namespace EllGames.Wiz.GameSystem.Actor.PlayerBehaviour
{
    public class PlayerBehaviourHandler : SerializedMonoBehaviour
    {
	    public void UseSkill(string skillName)
        {

        }

        public void AllowMove()
        {

        }

        public void DisallowMove()
        {

        }

        public void Kill()
        {

        }
    }
}
